fixed cart z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -99,6 +99,9 @@
 }
 
 // cart
+#cart {
+    z-index: 9999;
+}
 .cart-item {
     display: flex;
     position: relative;
